--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "swipabledrawer",
   "version": "0.1.0",
-  "description": "",
+  "description": "A swipable drawer",
   "main": "src/drawer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
