--- a/package.json
+++ b/package.json
@@ -4,5 +4,12 @@
   "description": "A swipable drawer",
   "main": "src/drawer.js",
   "author": "PhiliPdB <phlpdbrn@gmail.com> (https://philipdb.com)",
-  "license": "GNU GPLv3"
+  "license": "GNU GPLv3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PhiliPdB/SwipableDrawer"
+  },
+  "bugs": {
+    "url": "https://github.com/PhiliPdB/SwipableDrawer/issues"
+  }
 }
